src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Enable entity.<br>
	 * @note Delayed entity enabling is not supported yet (CHAM-96).<br>
	 * This operation enables the dds_entity_t. Created dds_entity_t objects can start in<br>
	 * either an enabled or disabled state. This is controlled by the value of the<br>
	 * entityfactory policy on the corresponding parent entity for the given<br>
	 * entity. Enabled entities are immediately activated at creation time meaning<br>
	 * all their immutable QoS settings can no longer be changed. Disabled Entities are not<br>
	 * yet activated, so it is still possible to change their immutable QoS settings. However,<br>
	 * once activated the immutable QoS settings can no longer be changed.<br>
	 * Creating disabled entities can make sense when the creator of the DDS_Entity<br>
	 * does not yet know which QoS settings to apply, thus allowing another piece of code<br>
	 * to set the QoS later on.<br>
	 * The default setting of DDS_EntityFactoryQosPolicy is such that, by default,<br>
	 * entities are created in an enabled state so that it is not necessary to explicitly call<br>
	 * dds_enable on newly-created entities.<br>
	 * The dds_enable operation produces the same results no matter how<br>
	 * many times it is performed. Calling dds_enable on an already<br>
	 * enabled DDS_Entity returns DDS_RETCODE_OK and has no effect.<br>
	 * If an Entity has not yet been enabled, the only operations that can be invoked<br>
	 * on it are: the ones to set, get or copy the QosPolicy settings, the ones that set<br>
	 * (or get) the Listener, the ones that get the Status and the dds_get_status_changes<br>
	 * operation (although the status of a disabled entity never changes). Other operations<br>
	 * will return the error DDS_RETCODE_NOT_ENABLED.<br>
	 * Entities created with a parent that is disabled, are created disabled regardless of<br>
	 * the setting of the entityfactory policy.<br>
	 * Calling dds_enable on an Entity whose parent is not enabled<br>
	 * will fail and return DDS_RETCODE_PRECONDITION_NOT_MET.<br>
	 * If the entityfactory policy has autoenable_created_entities<br>
	 * set to TRUE, the dds_enable operation on the parent will<br>
	 * automatically enable all child entities created with the parent.<br>
	 * The Listeners associated with an Entity are not called until the<br>
	 * Entity is enabled. Conditions associated with an Entity that<br>
	 * is not enabled are "inactive", that is, have a trigger_value which is FALSE.<br>
	 * @param[in]  e        The entity to enable.<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  The listeners of to the entity have been successfully been<br>
	 *                  copied into the specified listener parameter.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The parent of the given Entity is not enabled.<br>
	 * Original signature : <code>dds_return_t dds_enable(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:211</i>
	 */
	public static native DdscLibrary.dds_return_t dds_enable(DdscLibrary.dds_entity_t entity);
	/**
	 * @brief Delete given entity.<br>
	 * This operation will delete the given entity. It will also automatically<br>
	 * delete all its children, childrens' children, etc entities.<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its parent.<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  The entity and its children (recursive are deleted).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_delete(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:230</i>
	 */
	public static native DdscLibrary.dds_return_t dds_delete(DdscLibrary.dds_entity_t entity);
	/**
	 * @brief Get entity publisher.<br>
	 * This operation returns the publisher to which the given entity belongs.<br>
	 * For instance, it will return the Publisher that was used when<br>
	 * creating a DataWriter (when that DataWriter was provided here).<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its publisher.<br>
	 * @returns >0 - Success (valid entity handle).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_get_publisher(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:248</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_get_publisher(DdscLibrary.dds_entity_t writer);
	/**
	 * @brief Get entity subscriber.<br>
	 * This operation returns the subscriber to which the given entity belongs.<br>
	 * For instance, it will return the Subscriber that was used when<br>
	 * creating a DataReader (when that DataReader was provided here).<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its subscriber.<br>
	 * @returns >0 - Success (valid entity handle).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_get_subscriber(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:266</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_get_subscriber(DdscLibrary.dds_entity_t entity);
	/**
	 * @brief Get entity datareader.<br>
	 * This operation returns the datareader to which the given entity belongs.<br>
	 * For instance, it will return the DataReader that was used when<br>
	 * creating a ReadCondition (when that ReadCondition was provided here).<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its datareader.<br>
	 * @returns >0 - Success (valid entity handle).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_get_datareader(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:284</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_get_datareader(DdscLibrary.dds_entity_t condition);
	/**
	 * @brief Get the mask of a condition.<br>
	 * This operation returns the mask that was used to create the given<br>
	 * condition.<br>
	 * @param[in]  condition  Read or Query condition that has a mask.<br>
	 * @returns  0 - Success (given mask is set).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The mask arg is NULL.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_get_mask(dds_entity_t, uint32_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:302</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_mask(DdscLibrary.dds_entity_t condition, IntBuffer mask);
	/**
	 * Description : Read the status(es) set for the entity based on the enabled<br>
	 * status and mask set. This operation does not clear the read status(es).<br>
	 * Arguments :<br>
	 *   -# e Entity on which the status has to be read<br>
	 *   -# status Returns the status set on the entity, based on the enabled status<br>
	 *   -# mask Filter the status condition to be read (can be NULL)<br>
	 *   -# Returns 0 on success, or a non-zero error value if the mask does not<br>
	 *      correspond to the entity<br>
	 * Original signature : <code>dds_return_t dds_read_status(dds_entity_t, uint32_t*, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:319</i>
	 */
	public static native DdscLibrary.dds_return_t dds_read_status(DdscLibrary.dds_entity_t entity, IntBuffer status, int mask);
	/**
	 * Description : Read the status(es) set for the entity based on the enabled<br>
	 * status and mask set. This operation clears the status set after reading.<br>
	 * Arguments :<br>
	 *   -# e Entity on which the status has to be read<br>
	 *   -# status Returns the status set on the entity, based on the enabled status<br>
	 *   -# mask Filter the status condition to be read (can be NULL)<br>
	 *   -# Returns 0 on success, or a non-zero error value if the mask does not<br>
	 *      correspond to the entity<br>
	 * Original signature : <code>dds_return_t dds_take_status(dds_entity_t, uint32_t*, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:331</i>
	 */
	public static native DdscLibrary.dds_return_t dds_take_status(DdscLibrary.dds_entity_t entity, IntBuffer status, int mask);
	/**
	 * Description : Returns the status changes since they were last read.<br>
	 * Arguments :<br>
	 *   -# e Entity on which the statuses are read<br>
	 *   -# Returns the curent set of triggered statuses.<br>
	 * Original signature : <code>dds_return_t dds_get_status_changes(dds_entity_t, uint32_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:339</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_status_changes(DdscLibrary.dds_entity_t entity, IntBuffer status);
	/**
	 * Description : This operation returns the status enabled on the entity<br>
	 * Arguments :<br>
	 *   -# e Entity to get the status<br>
	 *   -# Returns the status that are enabled for the entity<br>
	 * Original signature : <code>dds_return_t dds_get_enabled_status(dds_entity_t, uint32_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:347</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_enabled_status(DdscLibrary.dds_entity_t entity, IntBuffer status);
